# kernel_overlay_amlogic_yukawa

./: BUILD.bazel  Kbuild  Kconfig.ext  Makefile  extract_modules.sh  update-ack.sh  vim3_extra.config  vim3_extra.fragment  vim3_symbols.txt  yukawa_dist_with_extraction.sh
arch/arm64/boot/dts/: BUILD.bazel  Makefile
arch/arm64/boot/dts/amlogic/: Makefile  meson-g12b-a311d-khadas-vim3-android.dts  meson-sm1-khadas-vim3l-android.dts
bazel/: constants.scl  merged_external_kernel_modules_uapi_headers.bzl  pkg_install_with_extraction.bzl
drivers/gpu/arm/: Kconfig
drivers/gpu/arm/midgard/: Kbuild  Kconfig  mali_kbase.h  mali_kbase_core_linux.c  mali_kbase_defs.h  mali_kbase_hwaccess_pm.h  mali_kbase_mem.h  mali_kbase_mem_linux.c  mali_kbase_mem_pool_debugfs.h  mali_kbase_tlstream.h
drivers/gpu/arm/midgard/tests/: Kconfig
drivers/gpu/arm/midgard/tests/kutf/: Kbuild  kutf_suite.c
drivers/net/wireless/bcmdhd/: ._Kbuild  Kbuild  Kconfig  dhd_config.c  wl_cfg80211.c  wl_escan.c  wl_escan.h  wl_iw.h
